--- a/style.css
+++ b/style.css
@@ -18,19 +18,21 @@ body{
     justify-content: center;
 }
 
+body > .todo-task-cover{
+    display: none;
+}
+
 .cover{
     background-color: #def ;
     height: 100vh;
+    max-height: 100vh;
     border-radius: 1rem;
     width: 350px;
-    overflow: scroll;
+    position: relative;
     display: flex;
     flex-direction: column;
-    position: relative;
-}
-
-.cover::-webkit-scrollbar{
-    display: none;
+    /* overflow: auto; */
+    /* overflow-y: scroll; */
 }
 
 .calCover {
@@ -47,6 +49,11 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    /* display: none; */
+}
+
+.headingCover.none{
+    display: none;
 }
 
 .heading-title{
@@ -54,12 +61,137 @@ body{
 }
 
 .todoCover {
-    height: 400px;
     width: 100%;
+    flex-grow: 1;
+    /* max-height: 413px; */
+    /* flex-basis: 1; */
     background-color: #345 ;
-    /* margin-top: 0.5rem ; */
     border-radius: 1rem;
+    /* padding: 1rem ; */
+    /* padding-bottom: 6rem; */
+    overflow: auto ;
+    position: relative;
 }
+
+.todoTaskScreen {
+    height: 100% ;
+    /* background-color: tomato; */
+    border-radius: 1rem;
+    overflow-y: scroll;
+    padding: 1rem;
+    padding-bottom: 4rem ;
+}
+
+.todoDarkScreen {
+    z-index: 4;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(112, 128, 144, 0.514);
+    border-radius: 1rem;
+    opacity: 1;
+    /* transition: visibility 50ms linear 250ms , opacity 250ms ease ; */
+}
+
+.todoDarkScreen.shrink {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.addTaskScreen {
+    position: absolute;
+    z-index: 5;
+    width: 100%;
+    height: 100%;
+    border-radius: 1rem;
+    background-color: darkslateblue ;
+    bottom: 0;
+    left: 0;
+    overflow: scroll ;
+    padding-bottom: 4rem;
+    transform-origin: bottom;
+    transition: transform 0.4s ease ;
+}
+
+.addTaskScreen.shrink {
+    transform: scaleY(0) ;
+    /* transform: translateY(100%); */
+}
+
+.addTaskScreen::-webkit-scrollbar , .todoTaskScreen::-webkit-scrollbar {
+    display: none;
+}
+
+.addTaskForm {
+    padding: 1.5rem;
+    opacity: 1;
+    transition: opacity 0.3s ease ;
+}
+
+.shrink > .addTaskForm {
+    opacity: 0;
+}
+
+.addTaskForm > form > div p {
+    color: whitesmoke ;
+    margin: 0.5rem 0;
+}
+
+.add-timings{
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.add-timings > input {
+    /* width: 100%; */
+    font-family: 'MuseoModerno';
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    border: none;
+    outline: none;
+}
+
+input[type="time"]{
+    color: whitesmoke;
+    background: transparent;
+    border: 1px solid #567;
+}
+
+.add-date , .select-date {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.select-date{
+    flex-grow: 1;
+    padding-left: 2rem;
+}
+
+#editSelectedDate {
+    cursor: pointer;
+}
+
+.add-title > input , .add-detail > textarea {
+    width: 100% ;
+    padding: 0.5rem 0.75rem;
+    border-radius: 0.5rem;
+    border: none;
+    outline: none;
+}
+
+.add-title > input:focus , .add-detail > textarea:focus {
+    outline: none;
+}
+
+.addTaskForm > form > div {
+    padding: 0.1px;
+    margin-bottom : 0.5rem ;
+}
+
 .heading-setting {
     width: 36px;
     height: 36px;
@@ -86,22 +218,15 @@ body{
     display: block;
 }
 
-.todoCover {
-    padding: 1rem ;
-    flex-grow: 1;
-    min-height: 400px;
-    display: flex;
-    flex-direction: column;
-}
 
 .todoHead {
-    /* padding: 0rem 1rem; */
+    padding: 0rem 1rem ;
     color: #def ;
 }
 
 .todo-tasks{
     margin-top: 1rem;
-    /* padding: 1rem 0 0 ; */
+    padding: 0.1px ;
     flex-grow: 1;
     color: #def;
 }
@@ -149,8 +274,8 @@ body{
 }
 
 .td-delete , .td-edit {
-    width: 30px;
-    height: 30px;
+    width: 24px;
+    height: 24px;
     cursor: pointer;
 }
 
@@ -173,6 +298,9 @@ body{
     cursor: pointer;
 }
 
+.td-more > * {   
+    pointer-events: none;
+}
 .td-m{
     height: 5px;
     width: 40px;
@@ -196,21 +324,49 @@ body{
 }
 
 
-.add-task-btn{
-    position: absolute ;
-    display: block;
+#addTaskBtn , #addTaskDoneBtn {
     height: 50px;
     width: 50px;
-    border-radius: 10px;
-    padding: 1rem;
-    outline: none;
-    border: none;
+    position: absolute ;
     bottom: 1rem;
-    right: 1rem;
-    cursor: pointer;
+    border-radius: 2rem;
+    padding: 0.75rem;
+    cursor: pointer;    
+    z-index: 5;
+    box-shadow: 1px 2px 10px 0px rgba(0, 0, 0, 0.466);
 }
 
-.add-task-btn > img {
+#addTaskBtn {
+    background-color: #abc ;
+    right: 1rem;
+    z-index: 6;
+    transition: transform 0.3s ease , background 0.3s ease ;
+}
+
+#addTaskBtn.shrink {
+    background-color: indianred ;
+    transform : rotate(45deg) ;
+}
+
+#addTaskBtn > svg , #addTaskDoneBtn > svg  {
     width: 100%;
     height: 100%;
 }
+
+#addTaskBtn #addTaskSvg , #addTaskDoneBtn #addTaskDoneBtnSvg {
+    fill: #234;
+}
+
+#addTaskDoneBtn{
+    left: 1rem;
+    right: auto;
+    background-color: green;
+    transition: left 0.4s ease , opacity 0.3s ease , background-color 0.3s ease ;
+}
+
+#addTaskDoneBtn.shrink {
+    background-color: #abc ;
+    left: calc(100% - 50px - 1rem ) ;    
+    opacity: 0;
+}
+
