--- a/style.css
+++ b/style.css
@@ -91,13 +91,14 @@ body > .todo-task-cover{
     height: 100%;
     background-color: rgba(112, 128, 144, 0.514);
     border-radius: 1rem;
-    opacity: 1;
+    opacity: 0;
+    visibility: hidden;
     /* transition: visibility 50ms linear 250ms , opacity 250ms ease ; */
 }
 
-.todoDarkScreen.shrink {
-    opacity: 0;
-    visibility: hidden;
+.todoDarkScreen.show {
+    opacity: 1;
+    visibility: visible;
 }
 
 .addTaskScreen {
@@ -106,7 +107,7 @@ body > .todo-task-cover{
     width: 100%;
     height: 100%;
     border-radius: 1rem;
-    background-color: darkslateblue ;
+    background-color: darkslategray ;
     bottom: 0;
     left: 0;
     overflow: scroll ;
@@ -370,3 +371,13 @@ input[type="time"]{
     opacity: 0;
 }
 
+@media(max-width : 500px){
+    .cover , .todoDarkScreen {
+        width: 100%;
+        border-radius: 0;
+    }   
+
+    .todoTaskScreen , .addTaskScreen , .todoCover {
+        border-radius: 1rem 1rem 0 0;
+    }
+}
