--- a/style.css
+++ b/style.css
@@ -283,6 +283,11 @@ input[type="time"]{
 .td-delete > img , .td-edit > img {
     width: 100%;
     height: 100%;
+    pointer-events: none;
+}
+
+#timeSelectP.invalid{
+    color: red;
 }
 
 .td-more{
