--- a/calendarstyle.css
+++ b/calendarstyle.css
@@ -1,12 +1,21 @@
+:root{
+    --light : #def ;
+    --med : #456 ;
+    --dark : #234 ;
+    --textLight : whitesmoke ;
+    --textDark : #456 ;
+}
 
 .calendar-card {
     height: 320px;
     width: 320px;
-    background-color: rgb(238, 240, 255);
+    background-color: var(--light) ;
     border-radius: 16px;
     box-shadow: 0px 2px 10px -3px rgba(0, 0, 0, 0.548);
     display: grid;
     grid-template-rows: 3fr 2fr 15fr;
+}
+.calendar-card.transit{
     transition: height 400ms ease  ;
 }
 
@@ -48,11 +57,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: var(--textDark);
 }
 
 .calendar-arrows>div:hover   {
-    background-color: #345;
-    color: #def;
+    background-color: var(--dark) ;
+    color: var(--textLight) ;
 }
 
 .calendar-arrows>div:hover > svg {
@@ -72,11 +82,12 @@
     cursor: pointer;
     padding: 0.5rem;
     margin: 0 0.25rem;
+    color: var(--textDark);
 }
 
 .calMonth:hover {
-    background-color: #234;
-    color: #def;
+    background-color: var(--dark) ;
+    color: var(--light) ;
 }
 
 .ar {
@@ -103,7 +114,7 @@
 .calMonthDay,
 .calWeekDay {
     font-size: 0.6rem;
-    color: #345;
+    color: var(--textDark) ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +123,7 @@
 
 .calMonthDay:hover {
     border-radius: 50px;
-    border: 1px solid #234;
+    border: 1px solid var(--dark) ;
 }
 
 
@@ -149,17 +160,17 @@
 
 .today{
     border-radius: 50px;
-    background-color: #234;
-    color: #def;
+    background-color: var(--med) ;
+    color: var(--light) ;
 }
 
 .gray {
-    color: #9ab;
+    color: var(--gray ) ;
 }
 
 .gray.today {
     background-color: transparent ;
-    border: 1px solid #234 ;
+    border: 1px solid var(--dark) ;
 }
 
 .fade {
@@ -171,8 +182,8 @@
 }
 
 .selected {
-    background-color: #345;
-    color: whitesmoke;
+    background-color: var(--dark) ;
+    color: var(--textLight) !important ;
 }
 
 .show {
